--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -50,3 +50,63 @@ h1, h3, h4, h5, p {
 .hero {
   padding: 22px 80px 66px 80px;
 }
+/*
+  ========================================
+  Clearfix
+  ========================================
+*/
+.group:before,
+.group:after{
+    content: "";
+    display: table;
+}
+.group:after{
+    clear: both;
+}
+.group{
+    clear: both;
+    *zoom: 1;
+}
+/*
+  ========================================
+  Primary header
+  ========================================
+*/
+
+.logo { 
+  border-top: 4px solid #648880;
+  padding: 40px 0 22px 0;
+  float: left;
+}
+
+/*
+  ========================================
+  Primary footer
+  ========================================
+*/
+
+.primary-footer small {
+  float: left;
+}
+.primary-footer {
+  padding-bottom: 44px;
+  padding-top: 44px;
+}
+
+
+/*
+==========================================
+My styles
+==========================================
+*/
+.navbar{
+    text-align: right;
+}
+/*
+footer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 1rem;
+}*/
