--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -11,11 +11,33 @@ Grid
    -moz-box-sizing: border-box;
         box-sizing: border-box;
 }
+.grid,
 .container {
   margin: 0 auto;
   padding-left: 30px;
   padding-right: 30px;
   width: 960px;
+}
+.container {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.col-1-3 {
+  width: 33.33%;
+}
+.col-2-3 {
+  width: 66.66%;
+}
+.col-1-3,
+.col-2-3{
+    display: inline-block;
+    vertical-align: top;
+}
+.grid,
+.col-1-3,
+.col-2-3 {
+  padding-left: 15px;
+  padding-right: 15px;
 }
 /*
   ========================================
@@ -92,7 +114,6 @@ h1, h3, h4, h5, p {
   padding-bottom: 44px;
   padding-top: 44px;
 }
-
 
 /*
 ==========================================
